--- a/career.html
+++ b/career.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1a">
+<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1a">
 
     
 
@@ -112,8 +112,8 @@
                 Career Guidance and Counciling&nbsp;</strong></span></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
                 As paer to the LMIS, CGS or Career Guidance System is an important tool that support the creation of job opportunies by guiding the job seekers into many direction among these are self-asses and CV improving in addition to other services online and face to face</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page13.html#footer6-6g">CV Update and improve<br></a>
-                <a class="btn btn-md btn-primary display-4" href="page14.html#footer6-6j">Self-Asses</a></div>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="CV01.html">CV Update and improve<br></a>
+                <a class="btn btn-md btn-primary display-4" href="SelfAsses.html">Self-Asses</a></div>
         </div>
     </div>
 
