--- a/training.html
+++ b/training.html
@@ -10,6 +10,8 @@
   <meta name="description" content="Training and service providers">
   
   <title>Training</title>
+  <link rel="preload" as="style" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+<link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="preload" as="style" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
 <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap.min.css">
@@ -18,10 +20,10 @@
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -81,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
@@ -112,8 +114,8 @@
                 Training Process and Providers</strong></span></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
                 Training Process and providers linkes between job search process and career guidance allowing job seekers more chances for a better and decent job by offering additional training and career guidance&nbsp;</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page20.html#footer6-7g">Training Providers</a>
-                <a class="btn btn-md btn-warning display-4" href="page19.html#footer6-7b">Training Opportunies</a></div>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="TrainingProviders.html#footer6-7g"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>Training Providers</a>
+                <a class="btn btn-md btn-warning display-4" href="TrainingSearch.html#footer6-7b"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>Training Opportunies</a></div>
         </div>
     </div>
 
@@ -143,7 +145,7 @@
                             يمكنك البحث المباشر والدقيق عن فرص تدريب بشكل عام او بناء على نموذج احتياجات او تقييم ذاتى يساعد فى اعطاء بعض الارشادات الخاصة بنوعية التدريب المرغوب فية او المطلوب
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page19.html#footer6-7b" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page19.html#footer6-7b" class="btn btn-info display-4"><span class="mbri-more-horizontal mbr-iconfont mbr-iconfont-btn"></span>
                             المزيد</a></div>
                 </div>
             </div>
@@ -160,7 +162,7 @@
                             يمكنك البحث المباشر والدقيق عن فرص تدريب بشكل عام او بناء على نموذج احتياجات او تقييم ذاتى يساعد فى اعطاء بعض الارشادات الخاصة بنوعية التدريب المرغوب فية او المطلوب
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page19.html#footer6-7b" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page19.html#footer6-7b" class="btn btn-primary display-4"><span class="mobi-mbri mobi-mbri-more-vertical mbr-iconfont mbr-iconfont-btn"></span>
                             المزيد</a></div>
                 </div>
             </div>
@@ -177,7 +179,7 @@
                             يمكنك البحث المباشر والدقيق عن فرص تدريب بشكل عام او بناء على نموذج احتياجات او تقييم ذاتى يساعد فى اعطاء بعض الارشادات الخاصة بنوعية التدريب المرغوب فية او المطلوب<br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page19.html#footer6-7b" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page19.html#footer6-7b" class="btn btn-success display-4"><span class="mobi-mbri mobi-mbri-more-horizontal mbr-iconfont mbr-iconfont-btn"></span>
                             فرص</a></div>
                 </div>
             </div>
@@ -193,7 +195,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                            يمكنك البحث المباشر والدقيق عن فرص تدريب بشكل عام او بناء على نموذج احتياجات او تقييم ذاتى يساعد فى اعطاء بعض الارشادات الخاصة بنوعية التدريب المرغوب فية او المطلوب</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="page17.html#footer6-6w" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page17.html#footer6-6w" class="btn btn-secondary display-4"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>
                             بحث</a></div>
                 </div>
             </div>
@@ -402,12 +404,12 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script async src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script async src="assets/tether/tether.min.js"></script>
-  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script async src="assets/parallax/jarallax.min.js"></script>
   <script async src="assets/dropdown/js/nav-dropdown.js"></script>
   <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script async src="assets/tether/tether.min.js"></script>
+  <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script async src="assets/parallax/jarallax.min.js"></script>
+  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/theme/js/script.js"></script>
   
   
