--- a/Employment.html
+++ b/Employment.html
@@ -12,16 +12,18 @@
   <title>Employment</title>
   <link rel="preload" as="style" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
 <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="preload" as="style" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+<link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-grid.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -81,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-u">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-u">
 
     
 
@@ -112,8 +114,8 @@
                 Recruiting and Match making</strong></span></h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
                 Search for a new job or update your CV using the LMIS with the integrated supporting tools between job search, offered training and career guidance and conciling&nbsp;</p>
-            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page13.html#footer6-6g">CV Add/Update<br></a>
-                <a class="btn btn-md btn-black-outline display-4" href="page17.html#footer6-6w">Job Search</a></div>
+            <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="CV01.html"><span class="mobi-mbri mobi-mbri-update mbr-iconfont mbr-iconfont-btn"></span>CV Add/Update</a>
+                <a class="btn btn-md btn-danger display-4" href="JobSearch.html#footer6-6w"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>Job Search</a></div>
         </div>
     </div>
 
@@ -134,7 +136,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background15.jpg" alt="Mobirise">
+                        <img src="assets/images/background115.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
@@ -150,7 +152,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background20.jpg" alt="Mobirise">
+                        <img src="assets/images/background210.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -167,7 +169,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background31.jpg" alt="Mobirise">
+                        <img src="assets/images/background311.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -184,7 +186,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background42.jpg" alt="Mobirise">
+                        <img src="assets/images/background412.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
@@ -220,7 +222,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tTlJf4hUm8ZJIjs5gfzndhk8IA4pUi9kxqEKwOgcbX4EH5uSBnId7qOezoQijhxWSf19nTgXS45gMokXKAztAEi/oAbL35xYv7XVrZXaya2+bSZ/eNHldmadeOHQCzS3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="D4qKd6jMs1yXmu92EH1nO56WvsxFPdR+Q4U2bxr6CyG51605FBej8pMlS3tFdgcea2A69OGsjyWMfmaPx9qeWlx4vbSNSHsDjZxXNOd5OthLMwglJ7ciAluk3qmvtRHI">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -256,7 +258,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="312C2/F3Xi3gHDKM/w7V6IFfrkWH1moJm7jSeOhtKsp/mo81RoGJkMXUs14gvyOAZCbMpvnK5LK2NOOACYZ0kJeAeXbq0xtNGIt1VI9h1A0U0z8cl44Rvub98TTwYKik">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HizdECXsEI3aXqqErRV6194Yiu3cT5a8F7OHli8z8NmhGbWZ6HeVImcxz6tfSUNBdPnxv1b79XK/MDTUHTf0CKNAXgnnxfn1CeRGaIKJhCaL80/po6Ab3NoMMlu1OSNq">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
