--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -110,7 +110,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jJOVmNG7bfMRtc41lygvBQ9N80Oz1D/uEcL2riTMl1sEbNPxGlS/X6agNoFyxk+9RaGzV7SKTeFWG5WwocjMBOJKjJcD6SYf6ng9lPk1bSRRWvKFADSa4yOqU4O3haFq">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="piAzdFqAbTv7wlK+6DQoY274uHv8jjOHfsMAYVtz642GYawXsA42i67r2+UOkchswwpc8Bhp5ScQ3hQoXkxHIpWZd+KXg8Svqm1RRxmD3ortrOacT+CKNGbKippZNi70">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
