--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site creator</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="v/JY4plMZvRW7qQKQtZ/DX2GsrnuZ3GT8x+S7irpXW+iIFOkCw0+C8aobDKObACB5vEFWMd43GYPjoIuYA9JtJRvkD4YvQgv4q1AEoCx2Iby+Qv6GYx998nUezHLJyMc">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="HG0/z5HtKyk4ApIBoRGSrO7dN0CGF6hSphyMP0XTfmJwjduAumU6fYkAQIX09Z5bhLqp4VODqlqrvhCUXErry8PxUjE73BxIzlXqdoM/iU+CT12nxyj8pwF7LCif3awM">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
