--- a/Indicators.html
+++ b/Indicators.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -205,7 +205,7 @@
                 <h2 class="mbr-section-title pb-3 align-left mbr-fonts-style display-2">Labour Market Indicators</h2>
                 <h3 class="mbr-section-subtitle pb-5 align-left mbr-fonts-style display-5">Labour Market Indicators</h3>
                 <div class="mbr-figure">
-                    <img src="assets/images/background624.jpg">
+                    <img src="assets/images/background64.jpg">
                 </div>
             </div>
             <div class="cards-block">
