--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="S2e4yYeIctTjxZiFRwzfRWjrmewa5AFqwFvbtkPp18QlQ2mICZHPYq9tJSFM5X2icS5YC6rptCDBq2b5XgZxUYx6FtUlFkXkBzpTYFDL2m3C2DcbCwgu2RSuKLQfNGEI">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZrZOYyT/clgk/4bckf471a+P2k5APSCfNP/Ck5UKCBcDsYrSdRbXvSAhkGoJqtdaQgy6SX5Nt9NXac1g3jLDz3F3Apm1AzF6yNbzYuZkGwwr0sc8VaWUdirpBUUii4av">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
