--- a/training.html
+++ b/training.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
