create github pages

--- a/CV01.html
+++ b/CV01.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
 
     
 
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zPgemKIR2+t0SgSRAbw+yVMW9RCWEISANDvB0+CzlpLWv8eHEn0LTqTzNiZ2kXDn7SuyOAW8b0D/FWDsyIBVtYih7UbUYwA5Oa3NFGNXOlKvq2mtYiroX+drlhoXv3nE">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="AZmtO72/912oPEpIvWcvCNo9v8OTu24sxkAjH/Uevu4vtF1tlgZfKM98QvTtGvE5Lue85uJI4hSpksZ/F7ocKk0v7t4SS9zzif4RIzuQ4KxtHiAkQZ2tNb/jl8MVxpZr">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -124,24 +124,24 @@
 <div class="col-lg-12 col-md-12 col-sm-12 form-group">
 <div class="form-row">
 <div class="col">
-<input type="text" name="nameFirst" placeholder="الاسم الاول" data-form-field="nameFirst" class="form-control text-multiple" value="" id="nameFirst-formbuilder-6h">
+<input type="text" name="nameFirst" placeholder="name" data-form-field="nameFirst" class="form-control text-multiple" value="" id="nameFirst-formbuilder-6h">
 </div>
 <div class="col">
-<input type="text" name="nameLast" placeholder="اسم العائلة" data-form-field="nameLast" class="form-control text-multiple" value="" id="nameLast-formbuilder-6h">
+<input type="text" name="nameLast" placeholder="family" data-form-field="nameLast" class="form-control text-multiple" value="" id="nameLast-formbuilder-6h">
 </div>
 </div>
 </div>
 <div data-for="name" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="name" placeholder="الاسم بالكامل" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-6h">
+<input type="text" name="name" placeholder="full name" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-6h">
 </div>
 <div data-for="email" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="email" name="email" placeholder="البريد الالكترونى" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-6h">
+<input type="email" name="email" placeholder="email" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-6h">
 </div>
 <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="tel" name="phone" placeholder="محمول" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6h">
+<input type="tel" name="phone" placeholder="mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6h">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="message">
-<textarea name="message" placeholder="معلومات أخرى" data-form-field="message" class="form-control display-7" id="message-formbuilder-6h"></textarea>
+<textarea name="message" placeholder="other" data-form-field="message" class="form-control display-7" id="message-formbuilder-6h"></textarea>
 </div>
 <div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"></span></button></div>
 </div>
