--- a/SelfAsses.html
+++ b/SelfAsses.html
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="CvvfiTmegOlfW29kah/AuUjgsPSvcB86aoYshXxA7q4Td98bg4fA3tkNpkjeiiiBAUVxrXQRx5yyje9NSTHE+0cDCF3SMHSNAEWI4xvREtfL29hySe6BIQQknbYZp06h">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gH5zi7+G8KtMRT0Ka5R0/24n9S+MAWDDcu3SpG87oiGN2C/e2Yc20+zkEdFS9939Fq7ZRKGXSb8ZSVk1ug0TwvSir8N7yOR2Y63THHKg/qfOrNRqWvVH1oXgxvcd/VOe">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -122,21 +122,21 @@
 <div class="col-lg-12 col-md-12 col-sm-12 form-group">
 <div class="form-row">
 <div class="col">
-<input type="text" name="nameFirst" placeholder="الاسم الاول" data-form-field="nameFirst" class="form-control text-multiple" value="" id="nameFirst-formbuilder-6k">
+<input type="text" name="nameFirst" placeholder="name" data-form-field="nameFirst" class="form-control text-multiple" value="" id="nameFirst-formbuilder-6k">
 </div>
 <div class="col">
-<input type="text" name="nameLast" placeholder="اسم العائلة" data-form-field="nameLast" class="form-control text-multiple" value="" id="nameLast-formbuilder-6k">
+<input type="text" name="nameLast" placeholder="family" data-form-field="nameLast" class="form-control text-multiple" value="" id="nameLast-formbuilder-6k">
 </div>
 </div>
 </div>
 <div data-for="name" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="name" placeholder="الاسم بالكامل" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-6k">
+<input type="text" name="name" placeholder="full" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-6k">
 </div>
 <div data-for="email" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="email" name="email" placeholder="البريد الالكترونى" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-6k">
+<input type="email" name="email" placeholder="email" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-6k">
 </div>
 <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="tel" name="phone" placeholder="محمول" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6k">
+<input type="tel" name="phone" placeholder="mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6k">
 </div>
 
 <div class="col-lg-6 col-md-12 col-sm-12 form-group" data-for="checkbox" style="transform: translateZ(0px);">
