--- a/Education.html
+++ b/Education.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
+<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-61">
 
     
 
@@ -326,7 +326,7 @@
                 </p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OABR1sHyiVJ7WGBlm3KXzA+3BoU1Gol9Pr0QzjBUyMhjBQ/z8Lb8k2Z/PLEJsTn60/CQS0m9xWXeibMUMuQS2tWA2h75mh1sl6qmfGS6gstccjfZsxgmvYFTzkGQaNm/">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b1tfLqkIq9dcom692fpfW7mD77ktPFS2UyK1YrEXO1pWssENGx8+j+ULjCeYAuxOC/I2By19QWxeDrurhVjXHzRSMaj20+OVYjilQ+KasP9ew5jMmRTjYksC2/YlZZWY">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
