--- a/RegOrg.html
+++ b/RegOrg.html
@@ -83,16 +83,16 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="form cid-rDpy57lQcn" dir="rtl" id="formbuilder-6d">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="form cid-rDpy57lQcn" dir="rtl" id="formbuilder-6d">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kAKJ6mGFBqgV46M6/sA6qaMHfEFlJ7BWwBg2JiboqVPsZj0fmAv0o3v7F43Xh6VCAlGrSKI3MZrRB/icbjbert5gY36chEyM/MltHnibJriCoSvGPJ6P/uW2WtvkUt0h">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="smEZMgD9GXNITeiHp3Ca7AU5NPdQcOsKZnN9VzzkHvno00SZvt2je//swclDyvBAYtJ+HOSiW29Ybs7Aox0QHMD2qbYhKyx7OU7v1mNc4/bE0yOl9LoEUS/dkkIdMEHG">
 <div class="form-row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">تم الحفظ</div>
+<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">saved</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
@@ -103,27 +103,27 @@
 <hr>
 </div>
 <div data-for="name" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="name" placeholder="اسم المؤسسة او الشركة" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-6d">
+<input type="text" name="name" placeholder="insitution name" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-6d">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group">
 <label class="form-control-label mbr-fonts-style display-7">الشخص المسؤل</label>
 <div class="form-row">
 <div class="col">
-<input type="text" name="nameFirst" placeholder="الاسم الاول" data-form-field="nameFirst" class="form-control text-multiple" value="" id="nameFirst-formbuilder-6d">
+<input type="text" name="nameFirst" placeholder="contact person first name " data-form-field="nameFirst" class="form-control text-multiple" value="" id="nameFirst-formbuilder-6d">
 </div>
 <div class="col">
-<input type="text" name="nameLast" placeholder="اسم العائلة" data-form-field="nameLast" class="form-control text-multiple" value="" id="nameLast-formbuilder-6d">
+<input type="text" name="nameLast" placeholder="contact person family name" data-form-field="nameLast" class="form-control text-multiple" value="" id="nameLast-formbuilder-6d">
 </div>
 </div>
 </div>
 <div data-for="email" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="email" name="email" placeholder="البريد الالكترونى" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-6d">
+<input type="email" name="email" placeholder="a@b.com" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-6d">
 </div>
 <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="tel" name="phone" placeholder="المحمول" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6d">
+<input type="tel" name="phone" placeholder="mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6d">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="message">
-<textarea name="message" placeholder="معلومات عامة عن المؤسسة" data-form-field="message" class="form-control display-7" id="message-formbuilder-6d"></textarea>
+<textarea name="message" placeholder="general" data-form-field="message" class="form-control display-7" id="message-formbuilder-6d"></textarea>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="select" style="transform: translateZ(0px);">
 <label for="select-formbuilder-6d" class="form-control-label mbr-fonts-style display-7">القطاع</label>
