--- a/RegUser.html
+++ b/RegUser.html
@@ -83,16 +83,16 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="form cid-rDpy93NEgi" dir="rtl" id="formbuilder-6e">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="form cid-rDpy93NEgi" dir="rtl" id="formbuilder-6e">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="lDOf7g/HGj4aemFDDRlm/FlIBrwfPHvk+OdB6m5gRKwhKF0CiwZWNHTZmcUzJ956ugSBOWOIeBPsQ7SJ/437vSb/PNOcn61+ivLJXdpF6QI0XPiDFXFKp+ycIxRRwV+n">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BpHacvx5Fr6INE9FX2RhPzPOyUDwED14grbhnt+0Mt+f65L8vEqpWNqWwFPhHZeNTqatxSrHQb9l54HkR2WcSnD5N06ez8TXb8Nqi3ffNhToQGt0+Q47sZYwI3Lc+gFG">
 <div class="form-row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">تم الحفظ</div>
+<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">saved</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
@@ -105,21 +105,21 @@
 <div class="col-lg-12 col-md-12 col-sm-12 form-group">
 <div class="form-row">
 <div class="col">
-<input type="text" name="nameFirst" placeholder="الاسم الاول" data-form-field="nameFirst" class="form-control text-multiple" value="" id="nameFirst-formbuilder-6e">
+<input type="text" name="nameFirst" placeholder="name" data-form-field="nameFirst" class="form-control text-multiple" value="" id="nameFirst-formbuilder-6e">
 </div>
 <div class="col">
-<input type="text" name="nameLast" placeholder="اسم العائلة" data-form-field="nameLast" class="form-control text-multiple" value="" id="nameLast-formbuilder-6e">
+<input type="text" name="nameLast" placeholder="family" data-form-field="nameLast" class="form-control text-multiple" value="" id="nameLast-formbuilder-6e">
 </div>
 </div>
 </div>
 <div data-for="name" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="name" placeholder="الاسم بالكامل" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-6e">
+<input type="text" name="name" placeholder="full name" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-6e">
 </div>
 <div data-for="email" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="email" name="email" placeholder="البريد الالكترونى" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-6e">
+<input type="email" name="email" placeholder="a@b.com" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-6e">
 </div>
 <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="tel" name="phone" placeholder="محمول" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6e">
+<input type="tel" name="phone" placeholder="mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6e">
 </div>
 <div class="col-lg-4 col-md-12 col-sm-12">
 <p class="mbr-fonts-style display-7">
@@ -133,7 +133,7 @@
 </h5>
 </div>
 <div data-for="message" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<textarea name="message" placeholder="معلومات أخرى" data-form-field="message" class="form-control display-7" id="message-formbuilder-6e"></textarea>
+<textarea name="message" placeholder="general " data-form-field="message" class="form-control display-7" id="message-formbuilder-6e"></textarea>
 </div>
 <div data-for="url" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <input type="url" name="url" placeholder="https://" pattern="https://.*" data-form-field="url" class="form-control display-7" value="" id="url-formbuilder-6e">
